// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-config 1`] = `
Object {
  "author": "Kittens McKitty <yarn@yarnpkg.com> (https://yarnpkg.com)",
  "license": "BSD",
  "main": "index.js",
  "name": "init-config",
  "private": true,
  "version": "0.0.0-alpha",
}
`;

exports[`init-github 1`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "hi-github",
  "private": false,
  "repository": "https://github.com/user/repo",
  "version": "1.0.0",
}
`;

exports[`init-private-empty 1`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "private-empty",
  "version": "1.0.0",
}
`;

exports[`init-yes 1`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "init-yes",
  "version": "1.0.0",
}
`;

exports[`init-yes-private 1`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "init-yes-private",
  "private": true,
  "version": "1.0.0",
}
`;
